--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.13"
 requests = "^2.32.3"
+loguru = "^0.7.2"
 
 [build-system]
 requires = ["poetry-core"]
