--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ package-mode = false
 python = "^3.13"
 requests = "^2.32.3"
 loguru = "^0.7.2"
+sqlalchemy = "^2.0.36"
+xmltodict = "^0.14.2"
 
 [build-system]
 requires = ["poetry-core"]
