--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.32.3"
 loguru = "^0.7.2"
 sqlalchemy = "^2.0.36"
 xmltodict = "^0.14.2"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
