--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = ">=3.9,<3.14"
 requests = "^2.32.3"
 loguru = "^0.7.2"
 sqlalchemy = "^2.0.36"
 xmltodict = "^0.14.2"
 python-dotenv = "^1.0.1"
+pyside6 = "^6.8.0.2"
 
 [build-system]
 requires = ["poetry-core"]
