--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ sqlalchemy = "^2.0.36"
 xmltodict = "^0.14.2"
 python-dotenv = "^1.0.1"
 pyside6 = "^6.8.0.2"
+pywin32 = "^308"
+openpyxl = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core"]
