--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 pyside6 = "^6.8.0.2"
 pywin32 = "^308"
 openpyxl = "^3.1.5"
+reportlab = "^4.3.0"
 
 [build-system]
 requires = ["poetry-core"]
