add version string to header and footer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pysidesix-frameless-window = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^6.0.0"
+tomli-w = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
