--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,19 +25,15 @@ jobs:
         virtualenvs-create: true
         virtualenvs-in-project: true
         
-    - name: Load cached venv
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+    - name: Configure Poetry
+      run: |
+        poetry config virtualenvs.in-project true
+        poetry config virtualenvs.create true
         
     - name: Install dependencies
-      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --no-dev
-      
-    - name: Install PyInstaller
-      run: poetry add --group dev pyinstaller
+      run: |
+        poetry install --no-dev
+        poetry add --group dev pyinstaller
       
     - name: Build executable
       run: |
