--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,28 @@ jobs:
         pyinstaller --onefile --windowed --name SalaryReader --icon=src/salary_reader/resources/images/export-icon.png src/salary_reader/main.py
         
     - name: Create release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: dist/SalaryReader.exe
-        generate_release_notes: true
-        draft: false
-        prerelease: false
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        body: |
+          Автоматически собранный релиз ${{ github.ref_name }}
+          
+          ## Изменения
+          - Обновления приложения
+          - Исправления ошибок
+        draft: false
+        prerelease: false
+        
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/SalaryReader.exe
+        asset_name: SalaryReader.exe
+        asset_content_type: application/octet-stream
