--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,13 +21,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests loguru sqlalchemy xmltodict python-dotenv pywin32 openpyxl reportlab pyside6 pysidesix-frameless-window packaging
-        pip install git+https://github.com/KhvatikG/iiko-api.git
+        pip install poetry
+        poetry install
         pip install pyinstaller
       
     - name: Build executable
       run: |
-        pyinstaller --onefile --windowed --name SalaryReader --icon=src/salary_reader/resources/images/export-icon.png src/salary_reader/main.py
+        pyinstaller SalaryReader.spec
         
     - name: Create release
       id: create_release
