--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "salary-reader"
-version = "2.3.4"
+version = "2.3.5"
 description = ""
 authors = ["Garik <khvatik.igor@gmail.com>"]
 readme = "README.md"
@@ -24,6 +24,7 @@ pyside6 = "^6.9.0"
 iiko-api = { git = "https://github.com/KhvatikG/iiko-api.git" }
 pysidesix-frameless-window = "^0.7.1"
 packaging = "^24.0"
+pillow = "^10.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^6.0.0"
