--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,8 @@ name: Build and Release
 
 on:
   push:
-    branches:
-      - main
     tags:
-      - 'v*'  # Запускается при создании тега, начинающегося с 'v'
+      - 'v*'  # Запускается только при создании релизных тегов, начинающихся с 'v'
 
 jobs:
   build:
